--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ typer = {version = "^0.6.1", extras = ["all"]}
 httpx = "^0.23.0"
 pydantic = "^1.10.2"
 beautifulsoup4 = "^4.11.1"
+xlrd = "^2.0.1"
 
 [tool.poetry.group.dev]
 optional = true
@@ -35,3 +36,7 @@ wse = "src.cli:app"
 
 [tool.black]
 line-length = 120
+
+[[tool.mypy.overrides]]
+module = "xlrd.*"
+ignore_missing_imports = true
